object area overflow fixes

--- a/src/ggrc/assets/stylesheets/_layout.scss
+++ b/src/ggrc/assets/stylesheets/_layout.scss
@@ -53,6 +53,7 @@
   position:fixed;
   top:85px;
   overflow-y:auto;
+  overflow-x:hidden;
   margin-left:200px;
   height:445px;
 }
